# iref3d

./: .gitignore  PLAN.md  launch_gui.py
core/: Cargo.toml
core/examples/: ffi_probe.rs
core/src/: ab_vectors.rs  adjoint_eta0.rs  adjoint_unrefined.rs  adjoint_w_scan.rs  basis.rs  census.rs  degree_bounds.rs  ffi.rs  gluing.rs  index_refined.rs  index_unrefined.rs  kernel.rs  lib.rs  nz.rs  phase_space.rs  poly.rs  summation.rs  swift_ffi.rs  weyl_symmetry.rs
core/src/cache/: iref_disk.rs  kernel_disk.rs  mod.rs
core/src/dehn/: kernel_terms.rs  mod.rs  nc_search.rs  unrefined_fill.rs
core/src/refined_dehn/: hj_cf.rs  is_chain.rs  mod.rs  multi_cusp.rs  multi_eta.rs  nc_compat.rs  unrefined_kernel_path.rs
core/tests/: ab_vectors_test.rs  adjoint_eta0_test.rs  adjoint_unrefined_test.rs  adjoint_w_scan_test.rs  cache_test.rs  census_test.rs  dehn_test.rs  gluing_test.rs  index_refined_test.rs  index_unrefined_test.rs  is_chain_test.rs  kernel_test.rs  multi_cusp_test.rs  nc_compat_test.rs  nz_test.rs  phase_space_test.rs  refined_dehn_test.rs  summation_test.rs  weyl_symmetry_test.rs
core/tests/fixtures/: census_fixture.db
core/tests/goldens/ab_vectors/: results.json
core/tests/goldens/adjoint_eta0/: results.json
core/tests/goldens/adjoint_unrefined/: results.json
core/tests/goldens/adjoint_w_scan/: results.json
core/tests/goldens/census/: manifolds.json
core/tests/goldens/dehn/: results.json
core/tests/goldens/gluing/: reduced.json
core/tests/goldens/index_refined/: results.json
core/tests/goldens/index_unrefined/: results.json
core/tests/goldens/kernel/: poly_convolve.json  tet_degree_x2.json  tet_index_series.json
core/tests/goldens/nz/: basis_changes.json
core/tests/goldens/phase_space/: basis.json
core/tests/goldens/refined_dehn/: hj_cf.json  is_chain.json  nc_compat.json  (+2 more)
(+243 files in other folders)
