[package]
name = "iref3d-core"
version = "0.1.0"
edition = "2021"
description = "Rust core for the refined 3D index (I^ref) of hyperbolic 3-manifolds."
license = "MIT OR Apache-2.0"

[lib]
name = "iref3d_core"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
hashbrown = "0.14"
ndarray = "0.16"
rusqlite = { version = "0.31", features = ["bundled"] }
num-rational = { version = "0.4", features = ["num-bigint"] }
num-bigint = "0.4"
num-integer = "0.1"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.pyo3]
version = "0.28"
optional = true
features = ["extension-module"]

[features]
default = []
python = ["pyo3", "pyo3-build-config"]
swift = []
# dev-only: will embed Python for call-by-call diffing against v0.5
live-diff = []

[build-dependencies]
pyo3-build-config = { version = "0.28", optional = true }

[dev-dependencies]
serde_json = "1"
